deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
      version: stable
  template:
    metadata:
      labels:
        app: python-app
        version: stable

    spec:
      imagePullSecrets:
      - name: gcr-json-key
      containers:
      - name: python-app
        image: gcr.io/reliable-sight-425106-c5/my-python-app:stable
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
      version: canary
  template:
    metadata:
      labels:
        app: python-app
        version: canary
    spec:
      imagePullSecrets:
      - name: gcr-json-key
      containers:
      - name: python-app
        image: gcr.io/reliable-sight-425106-c5/my-python-app:canary
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
       

---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
