k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: gcr.io/reliable-sight-425106-c5/my-python-app:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"   
            cpu: "250m"      
          limits:
            memory: "128Mi"  
            cpu: "500m"   

---
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  type: LoadBalancer
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
