istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: python-app-destination
spec:
  host: python-app-service
  subsets:
  - name: stable
    labels:
      version: stable
  - name: canary
    labels:
      version: canary

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python-app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  http:
  - match:
    - uri:
        prefix: "/stable"
    route:
    - destination:
        host: python-app-service
        subset: stable
  - match:
    - uri:
        prefix: "/canary"
    route:
    - destination:
        host: python-app-service
        subset: canary
  - route:
    - destination:
        host: python-app-service
        subset: stable  # Default route for other paths
